logs/pypi-server.log
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pypi_server'...
Listing './lib/python3.5/site-packages/pypi_server/db'...
Listing './lib/python3.5/site-packages/pypi_server/db/migrator'...
Listing './lib/python3.5/site-packages/pypi_server/db/migrator/migrations'...
Listing './lib/python3.5/site-packages/pypi_server/handlers'...
Listing './lib/python3.5/site-packages/pypi_server/handlers/api'...
Listing './lib/python3.5/site-packages/pypi_server/handlers/pypi'...
Listing './lib/python3.5/site-packages/pypi_server/handlers/pypi/proxy'...
Listing './lib/python3.5/site-packages/pypi_server/handlers/pypi/simple'...
Listing './lib/python3.5/site-packages/pypi_server/static'...
Listing './lib/python3.5/site-packages/pypi_server/static/css'...
Listing './lib/python3.5/site-packages/pypi_server/static/favicon'...
Listing './lib/python3.5/site-packages/pypi_server/static/js'...
Listing './lib/python3.5/site-packages/pypi_server/static/js/controllers'...
Listing './lib/python3.5/site-packages/pypi_server/static/js/lib'...
Listing './lib/python3.5/site-packages/pypi_server/static/partial'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/angular'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/angular/libs'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/bootstrap'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/bootstrap/css'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/bootstrap/js'...
Listing './lib/python3.5/site-packages/pypi_server/static/vendor/select2'...
Listing './lib/python3.5/site-packages/pypi_server/templates'...
Listing './lib/python3.5/site-packages/pypi_server/templates/simple'...
Listing './lib/python3.5/site-packages/pypi_server-0.4.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slimurl'...
Listing './lib/python3.5/site-packages/slimurl-0.7.8.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/tornado_xmlrpc'...
Listing './lib/python3.5/site-packages/tornado_xmlrpc-1.7.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
